# RngKitPSG

./: .gitignore  LICENSE.txt  Pipfile  README.md  chat_mpl.py  chat_zscore.py  framed_rng.py  main.py  pyproject.toml  requirements.txt  rng_module.py  rngkit.py  rngkit_installer.txt  secrets_rng.py  test.py  test_module.py  test_rng_kit.py  teste1.py  teste2.py  teste_module.py
1-SavedFiles/: 2019_teste.csv
2-Installation/TrueRng/TrueRNGpro/: TrueRNGpro.inf  truerngpro.cat
Installer/: RngKit-installer-214.txt
Installer/rngkit/: _asyncio.pyd  _bz2.pyd  _cffi_backend.cp38-win_amd64.pyd  _ctypes.pyd  _decimal.pyd  _elementtree.pyd  _hashlib.pyd  _lzma.pyd  _multiprocessing.pyd  _overlapped.pyd  _queue.pyd  _socket.pyd  _sqlite3.pyd  _ssl.pyd  _tkinter.pyd  kiwisolver.cp38-win_amd64.pyd  pyexpat.pyd  select.pyd  unicodedata.pyd
Installer/rngkit/PIL/: _imaging.cp38-win_amd64.pyd  _imagingtk.cp38-win_amd64.pyd  _webp.cp38-win_amd64.pyd
Installer/rngkit/matplotlib/: _contour.cp38-win_amd64.pyd  _image.cp38-win_amd64.pyd  _path.cp38-win_amd64.pyd  _png.cp38-win_amd64.pyd  _qhull.cp38-win_amd64.pyd  _tri.cp38-win_amd64.pyd  ft2font.cp38-win_amd64.pyd  ttconv.cp38-win_amd64.pyd
src/: instructions.txt
src/others/: instructions.txt
tests/: Demo_Matplotlib_Animated_FuncAnimation.py  RngKit-installer-216.txt  RngKit-installer-230.txt  RngKit-installer-300.txt  animated_plot_async.py  concat_files.py  exe-maker.py  framed_rng.py  nsis_maker.py  nsis_template.txt  nuitka_cmd.txt  teste1.py  teste2.py  teste_module.py  teste_psg_pandas_numpy.py  upx-packer.py
(+61 files in other folders)
